force-app/main/default/objects/Comp_Request__c/Comp_Request__c.object-meta.xml
<CustomObject>
    <label>Comp Request</label>
    <nameField>
        <displayFormat>COMP-{0000}</displayFormat>
        <label>Comp Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>