force-app/main/default/objects/Comp_Request__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Amount of final approval after negotiation, if any.</description>
    <label>Approved Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>