force-app/main/default/objects/Comp_Request__c/fields/Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this field if the Request should be cancelled after being flagged by Finance as &quot;Needs Attention&quot;</description>
    <inlineHelpText>Select this field if the Request should be cancelled after being flagged by Finance as &quot;Needs Attention&quot;</inlineHelpText>
    <label>Cancel Request</label>
    <type>Checkbox</type>
</CustomField>