force-app/main/default/objects/Comp_Request__c/fields/Comp_Description__c.field-meta.xml
<CustomField>
    <fullName>Comp_Description__c</fullName>
    <inlineHelpText>Please describe the reason for this Comp Request</inlineHelpText>
    <label>Comp Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>