force-app/main/default/objects/Comp_Request__c/fields/Comp_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Comp_Payment_Method__c</fullName>
    <label>Comp Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
                <default>true</default>
                <label>Job</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>