force-app/main/default/objects/Comp_Request__c/fields/Comp_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Comp_Request_Reason__c</fullName>
    <label>Comp Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gil Error</fullName>
            </value>
            <value>
                <fullName>New Contractor Education</fullName>
            </value>
            <value>
                <fullName>Trip Charge</fullName>
            </value>
            <value>
                <fullName>Team Error</fullName>
            </value>
            <value>
                <fullName>Overgrowth - Placement Issue</fullName>
            </value>
            <value>
                <fullName>Overgrowth - Incorrect Tracing</fullName>
            </value>
            <value>
                <fullName>$10.00 Bonus- 1st Job</fullName>
                <isActive>false</isActive>
                <label>$10.00 Bonus- 1st Job</label>
            </value>
            <value>
                <fullName>BBB</fullName>
                <isActive>false</isActive>
                <label>BBB</label>
            </value>
            <value>
                <fullName>BBB Complaint</fullName>
                <isActive>false</isActive>
                <label>BBB Complaint</label>
            </value>
            <value>
                <fullName>Bid Miscommunication</fullName>
                <isActive>false</isActive>
                <label>Bid Miscommunication</label>
            </value>
            <value>
                <fullName>Bush Trimming</fullName>
                <isActive>false</isActive>
                <label>Bush Trimming</label>
            </value>
            <value>
                <fullName>Client Team Error</fullName>
                <isActive>false</isActive>
                <label>Client Team Error</label>
            </value>
            <value>
                <fullName>Consumer Team Error</fullName>
                <isActive>false</isActive>
                <label>Consumer Team Error</label>
            </value>
            <value>
                <fullName>Contractor Insurance Fees</fullName>
                <isActive>false</isActive>
                <label>Contractor Insurance Fees</label>
            </value>
            <value>
                <fullName>Contractor Team Error</fullName>
                <isActive>false</isActive>
                <label>Contractor Team Error</label>
            </value>
            <value>
                <fullName>Debris Removal</fullName>
                <isActive>false</isActive>
                <label>Debris Removal</label>
            </value>
            <value>
                <fullName>Inspection</fullName>
                <isActive>false</isActive>
                <label>Inspection</label>
            </value>
            <value>
                <fullName>LeafCleanup</fullName>
                <isActive>false</isActive>
                <label>LeafCleanup</label>
            </value>
            <value>
                <fullName>Mulch</fullName>
                <isActive>false</isActive>
                <label>Mulch</label>
            </value>
            <value>
                <fullName>Overgrowth Fee</fullName>
                <isActive>false</isActive>
                <label>Overgrowth Fee</label>
            </value>
            <value>
                <fullName>Overgrowth- Incorrect Tracing</fullName>
                <isActive>false</isActive>
                <label>Overgrowth- Incorrect Tracing</label>
            </value>
            <value>
                <fullName>Pet Waste</fullName>
                <isActive>false</isActive>
                <label>Pet Waste</label>
            </value>
            <value>
                <fullName>Placement Issue</fullName>
                <isActive>false</isActive>
                <label>Placement Issue</label>
            </value>
            <value>
                <fullName>QC Team Error</fullName>
                <isActive>false</isActive>
                <label>QC Team Error</label>
            </value>
            <value>
                <fullName>Remainder of what NTE does not cover</fullName>
                <isActive>false</isActive>
                <label>Remainder of what NTE does not cover</label>
            </value>
            <value>
                <fullName>Save- a- relationship (Client)</fullName>
                <isActive>false</isActive>
                <label>Save- a- relationship (Client)</label>
            </value>
            <value>
                <fullName>Save- a- relationship (Consumer)</fullName>
                <isActive>false</isActive>
                <label>Save- a- relationship (Consumer)</label>
            </value>
            <value>
                <fullName>Save- a- relationship (Contractor)</fullName>
                <isActive>false</isActive>
                <label>Save- a- relationship (Contractor)</label>
            </value>
            <value>
                <fullName>SeasonalCleanUp</fullName>
                <isActive>false</isActive>
                <label>SeasonalCleanUp</label>
            </value>
            <value>
                <fullName>TreeTrimming</fullName>
                <isActive>false</isActive>
                <label>TreeTrimming</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>