force-app/main/default/objects/Comp_Request__c/fields/Consumer_Account__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comp Requests (Consumer Account)</relationshipLabel>
    <relationshipName>Consumer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>