force-app/main/default/objects/Comp_Request__c/fields/Continue_Request__c.field-meta.xml
<CustomField>
    <fullName>Continue_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if the Request should continue after being flagged by Finance as &quot;Needs Attention&quot;</inlineHelpText>
    <label>Continue Request</label>
    <type>Checkbox</type>
</CustomField>