force-app/main/default/objects/Comp_Request__c/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comp Requests (Contractor ID)</relationshipLabel>
    <relationshipName>Operation_Comp_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>