force-app/main/default/objects/Comp_Request__c/fields/Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>Contractor_ID__c</fullName>
    <description>Used for reporting data</description>
    <formula>TEXT(Contractor_Account__r.Contractor_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor ID</label>
    <type>Text</type>
</CustomField>