force-app/main/default/objects/Comp_Request__c/fields/Customer_Client_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Client_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/Client Account Lookup</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contractor_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Customer_Type__pr.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comp Requests (Account)</relationshipLabel>
    <relationshipName>Comp_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>