force-app/main/default/objects/Comp_Request__c/fields/Date_of_Last_Completed_Job__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Completed_Job__c</fullName>
    <label>Date of Last Completed Job</label>
    <type>Date</type>
</CustomField>