force-app/main/default/objects/Comp_Request__c/fields/Director_VP_Submission__c.field-meta.xml
<CustomField>
    <fullName>Director_VP_Submission__c</fullName>
    <description>true if current user has role of VP or director, used for criteria in the approval process to auto approve requests for this user type</description>
    <formula>IF(
OR( 
CreatedBy.UserRole.DeveloperName = &quot;VP of Operations&quot;,
CreatedBy.UserRole.DeveloperName = &quot;Account Director&quot;,
CreatedBy.UserRole.DeveloperName = &quot;Director Of Account Management&quot;, 
CreatedBy.UserRole.DeveloperName = &quot;Director of Market Operations&quot;,
CreatedBy.UserRole.DeveloperName = &quot;Training Manager&quot;,
CreatedBy.UserRole.DeveloperName = &quot;COO&quot;,
CreatedBy.UserRole.DeveloperName = &quot;Director of Contractor Success&quot;,
CreatedBy.Profile.Name = &quot;Ops Director&quot;
), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director/VP Submission</label>
    <type>Checkbox</type>
</CustomField>