force-app/main/default/objects/Comp_Request__c/fields/Finance_Contractors_Gil_Page__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contractors_Gil_Page__c</fullName>
    <description>URL LInk to the related Contractors Gil page when the Contractors Account field is not null- otherwise displays &quot;Not Available&quot;</description>
    <formula>IF(
NOT(ISBLANK(Contractor_Account__c)),
HYPERLINK(&quot;https://www.taskeasy.com/administration/showContractor/&quot; &amp; TEXT(Contractor_Account__r.Contractor_Id__c), &quot;View Gil Page&quot;),
&quot;Not Available&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractors Gil Page</label>
    <type>Text</type>
</CustomField>