force-app/main/default/objects/Comp_Request__c/fields/Finance_Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Finance_Date_Processed__c</fullName>
    <label>Date Processed</label>
    <type>Date</type>
</CustomField>