force-app/main/default/objects/Comp_Request__c/fields/Finance_Job__c.field-meta.xml
<CustomField>
    <fullName>Finance_Job__c</fullName>
    <label>Job</label>
    <length>70</length>
    <type>Text</type>
</CustomField>