force-app/main/default/objects/Comp_Request__c/fields/Finance_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Finance_Processed_By__c</fullName>
    <label>Processed By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>