force-app/main/default/objects/Comp_Request__c/fields/Finance_Task__c.field-meta.xml
<CustomField>
    <fullName>Finance_Task__c</fullName>
    <label>Task</label>
    <length>70</length>
    <type>Text</type>
</CustomField>