force-app/main/default/objects/Comp_Request__c/fields/Issue_To__c.field-meta.xml
<CustomField>
    <fullName>Issue_To__c</fullName>
    <label>Issue To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>