force-app/main/default/objects/Comp_Request__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>