force-app/main/default/objects/Comp_Request__c/fields/Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent__c</fullName>
    <description>Automation Stamps the date of the most recent reminder sent, used for reoccurring/daily reminders</description>
    <label>Last Reminder Sent</label>
    <type>DateTime</type>
</CustomField>