force-app/main/default/objects/Comp_Request__c/fields/Legacy_Original_Submission_By__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Original_Submission_By__c</fullName>
    <label>Original Submission By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>