force-app/main/default/objects/Comp_Request__c/fields/Legacy_Original_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Original_Submission_Date__c</fullName>
    <label>Original Submission Date</label>
    <type>Date</type>
</CustomField>