force-app/main/default/objects/Comp_Request__c/fields/Legacy_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Submitter_Email__c</fullName>
    <label>Submitter Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>