force-app/main/default/objects/Comp_Request__c/fields/Legacy_Team__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Team__c</fullName>
    <label>Team</label>
    <length>120</length>
    <type>Text</type>
</CustomField>