force-app/main/default/objects/Comp_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Finance_Ready</fullName>
                <label>Finance Ready</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
                <label>Finance Processed</label>
            </value>
            <value>
                <fullName>Ops Rejected</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>Comp will be Processed after Job Completion</fullName>
                <isActive>false</isActive>
                <label>Comp will be Processed after Job Completion</label>
            </value>
            <value>
                <fullName>Finance Processed</fullName>
                <isActive>false</isActive>
                <label>Finance Processed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>