force-app/main/default/objects/Comp_Request__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on Job Completion</fullName>
            </value>
            <value>
                <fullName>Duplicate Comp</fullName>
            </value>
            <value>
                <fullName>Client Credit</fullName>
            </value>
            <value>
                <fullName>Archived Contractor</fullName>
            </value>
            <value>
                <fullName>Incorrect Task Number Listed</fullName>
            </value>
            <value>
                <fullName>Incorrect Job Number Listed</fullName>
            </value>
            <value>
                <fullName>Incorrect CONT ID Listed</fullName>
            </value>
            <value>
                <fullName>Comp Price Too High</fullName>
            </value>
            <value>
                <fullName>Processed - Approved</fullName>
            </value>
            <value>
                <fullName>Processed - Rejected</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
            <value>
                <fullName>Approval Limit</fullName>
                <isActive>false</isActive>
                <label>Approval Limit</label>
            </value>
            <value>
                <fullName>Incorrect Task or Job Number</fullName>
                <isActive>false</isActive>
                <label>Incorrect Task or Job Number</label>
            </value>
            <value>
                <fullName>Job not Completed</fullName>
                <isActive>false</isActive>
                <label>Job not Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>