force-app/main/default/objects/Comp_Request__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <description>Defines whether this request is an initial submission or a resubmission</description>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Submission</fullName>
                <default>true</default>
                <label>Initial Submission</label>
            </value>
            <value>
                <fullName>Re-Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>