force-app/main/default/objects/Comp_Request__c/fields/Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval__c</fullName>
    <formula>IF(
ISPICKVAL(Request_Status__c, &quot;New&quot;), False, True
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>