force-app/main/default/objects/Comp_Request__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <label>Task ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>