force-app/main/default/objects/Comp_Request__c/fields/Task_Last_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Last_Activation_Date__c</fullName>
    <label>Task Last Activation Date</label>
    <type>Date</type>
</CustomField>