force-app/main/default/objects/Comp_Request__c/fields/TEI_Submission__c.field-meta.xml
<CustomField>
    <fullName>TEI_Submission__c</fullName>
    <description>true if current user is a TEI advocate - used for criteria in approval process</description>
    <formula>OR(
CreatedBy.Profile.Name = &apos;TEI Advocate&apos;,
CreatedBy.UserRole.DeveloperName = &apos;TEI_Contractor_Recruitment_Advocate&apos;,
CreatedBy.UserRole.DeveloperName = &apos;TEI_Account_Management_Advocate&apos;,
CreatedBy.UserRole.DeveloperName = &apos;TEI_Account_Management_Team_Lead&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEI Submission</label>
    <type>Checkbox</type>
</CustomField>