force-app/main/default/objects/Comp_Request__c/validationRules/Contractor_or_Client_Lookup_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_or_Client_Lookup_Required</fullName>
    <active>true</active>
    <description>Requires EITHER the Contractor OR Client/Customer Field to be populated</description>
    <errorConditionFormula>Contractor_Account__c = NULL &amp;&amp; Customer_Client_Account_Lookup__c = NULL</errorConditionFormula>
    <errorMessage>A Contractor or Customer/Client Account must be specified</errorMessage>
</ValidationRule>