force-app/main/default/objects/Comp_Request__c/validationRules/Needs_Attention_Status_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Needs_Attention_Status_Reason_Required</fullName>
    <active>true</active>
    <description>Requires a status reason to be selected when &quot;Needs Attention&quot; is the current Request Status</description>
    <errorConditionFormula>AND(
$Profile.Name = &quot;Finance&quot;,
ISPICKVAL( Request_Status__c, &quot;Needs Attention&quot; ),
ISPICKVAL( Status_Reason__c, &apos;&apos; )  
)</errorConditionFormula>
    <errorMessage>You must select a Status Reason when Request is in the &quot;Needs Attention&quot; Status</errorMessage>
</ValidationRule>