force-app/main/default/objects/Comp_Request__c/validationRules/Notes_Required_on_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Required_on_status_change</fullName>
    <active>true</active>
    <description>requires a note when record status is changed by Finance</description>
    <errorConditionFormula>IF(AND(ISPICKVAL(Request_Status__c, &quot;Processed&quot;), ISCHANGED( Status_Reason__c ),NOT(ISPICKVAL(Status_Reason__c,&quot;Request Cancelled&quot;)), ISBLANK( Finance_Notes__c )), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You must add a note when changing the &quot;Status Reason&quot; field value while the &quot;Status&quot; field has a value of &quot;Processed&quot;</errorMessage>
</ValidationRule>