force-app/main/default/objects/Comp_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status_Reason__c</columns>
    <columns>Amount_of_Request__c</columns>
    <columns>Comp_Request_Reason__c</columns>
    <columns>Comp_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>