force-app/main/default/objects/Comp_Request__c/listViews/Comp_Requests.listView-meta.xml
<ListView>
    <fullName>Comp_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Amount_of_Request__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Finance_Date_Processed__c</columns>
    <columns>Comp_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Jason Hogan</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,Pending,Needs Attention</value>
    </filters>
    <label>Comp Requests</label>
    <sharedTo>
        <roleAndSubordinates>Director_Of_Finance</roleAndSubordinates>
        <roleAndSubordinates>Finance_Advocate</roleAndSubordinates>
        <roleAndSubordinates>Finance_Manager</roleAndSubordinates>
        <roleAndSubordinates>Finance_Team_Lead</roleAndSubordinates>
    </sharedTo>
</ListView>