force-app/main/default/objects/Comp_Request__c/listViews/Leadership_Comp_Request.listView-meta.xml
<ListView>
    <fullName>Leadership_Comp_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Leadership</label>
    <queue>Leadership</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>