force-app/main/default/objects/Comp_Request__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status_Reason__c</columns>
    <columns>Amount_of_Request__c</columns>
    <columns>Comp_Request_Reason__c</columns>
    <columns>Comp_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Needs Attention</value>
    </filters>
    <label>Needs Attention</label>
</ListView>