force-app/main/default/objects/Comp_Request__c/listViews/Waiting_on_Job_Completion.listView-meta.xml
<ListView>
    <fullName>Waiting_on_Job_Completion</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status_Reason__c</columns>
    <columns>Amount_of_Request__c</columns>
    <columns>Comp_Request_Reason__c</columns>
    <columns>Comp_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Status_Reason__c</field>
        <operation>equals</operation>
        <value>Waiting on Job Completion</value>
    </filters>
    <label>Waiting on Job Completion</label>
</ListView>